<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1_question"
                android:theme="@style/Questions" />

            <RadioGroup
                android:id="@+id/radio_group_q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_a1"></RadioButton>

                <RadioButton
                    android:id="@+id/radio_q1_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_a2_answer"></RadioButton>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_a3"></RadioButton>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_a4"></RadioButton>

            </RadioGroup>

            <TextView
                android:id="@+id/text_q1_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:theme="@style/Answers" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2_question"
                android:theme="@style/Questions" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_q2_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_a1" />

                <CheckBox
                    android:id="@+id/check_q2_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_a2" />

                <CheckBox
                    android:id="@+id/check_q2_a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_a3" />

                <CheckBox
                    android:id="@+id/check_q2_a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_a4" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_q2_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:theme="@style/Answers" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3_question"
                android:theme="@style/Questions" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_a1"></RadioButton>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_a2"></RadioButton>

                <RadioButton
                    android:id="@+id/radio_q3_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_a3_answer"></RadioButton>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_a4"></RadioButton>

            </RadioGroup>

            <TextView
                android:id="@+id/text_q3_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:theme="@style/Answers" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4_question"
                android:theme="@style/Questions" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_a1"></RadioButton>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_a2"></RadioButton>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_a3"></RadioButton>

                <RadioButton
                    android:id="@+id/radio_q4_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_a4_answer"></RadioButton>

            </RadioGroup>

            <TextView
                android:id="@+id/text_q4_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:theme="@style/Answers" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5_question"
                android:theme="@style/Questions" />

            <EditText
                android:id="@+id/edit_text_q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/q5_hint"
                android:minHeight="48dp">
            </EditText>

            <TextView
                android:id="@+id/text_q5_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Answers" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_button"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"> </Button>
                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_button"></Button>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>